Adding Redis Capability to management-cards service